fix: overflow css properties

--- a/client/src/app/pages/card-details/card-details.component.css
+++ b/client/src/app/pages/card-details/card-details.component.css
@@ -29,6 +29,8 @@
 .compound-details h2 {
   margin-top: 30px;
   text-align: center;
+  margin-right: 10px;
+  overflow: overlay;
 }
 
 .compound-details p {
